# ----------------------------------------------------------------------------
# Todo
# ============================================================================


# ----------------------------------------------------------------------------
if (OPENEV_BUILD_TESTS)
	add_subdirectory(testmain)
endif()
# ============================================================================
